Fix Peter Dickson to be Brian Dickson!

--- a/draft-ietf-dprive-xfr-over-tls-06.html
+++ b/draft-ietf-dprive-xfr-over-tls-06.html
@@ -1195,7 +1195,7 @@ described below)."
 <p id="rfc.section.15.p.4">Security concerns of DoT are outlined in <a href="#RFC7858">[RFC7858]</a> and <a href="#RFC8310">[RFC8310]</a>.  </p>
 <h1 id="rfc.section.16"><a href="#rfc.section.16">16.</a> <a href="#acknowledgements" id="acknowledgements">Acknowledgements</a></h1>
 <p id="rfc.section.16.p.1">The authors thank Tony Finch, Benno Overeinder, Shumon Huque and Tim Wicinski and many other members of DPRIVE for review and discussions.  </p>
-<p id="rfc.section.16.p.2">The authors particularly thank Peter van Dikj, Ondrey Sury, Peter Dickson and several other open source DNS implementors for valuable discussion and clarification on the issue associated with pipelining XFR queries and handling out-of-order/intermingled responses.  </p>
+<p id="rfc.section.16.p.2">The authors particularly thank Peter van Dikj, Ondrey Sury, Brian Dickson and several other open source DNS implementors for valuable discussion and clarification on the issue associated with pipelining XFR queries and handling out-of-order/intermingled responses.  </p>
 <h1 id="rfc.section.17"><a href="#rfc.section.17">17.</a> <a href="#contributors" id="contributors">Contributors</a></h1>
 <p id="rfc.section.17.p.1">Significant contributions to the document were made by: </p>
 <p id="rfc.section.17.p.2">Han Zhang <br/> Salesforce <br/> San Francisco, CA <br/> United States </p>
