Fix list in appendix

--- a/draft-ietf-dprive-xfr-over-tls-08.html
+++ b/draft-ietf-dprive-xfr-over-tls-08.html
@@ -1202,8 +1202,17 @@ described below)."
 <p id="rfc.section.17.p.2">Han Zhang <br/> Salesforce <br/> San Francisco, CA <br/> United States </p>
 <p id="rfc.section.17.p.3">Email: hzhang@salesforce.com </p>
 <h1 id="rfc.section.18"><a href="#rfc.section.18">18.</a> <a href="#changelog" id="changelog">Changelog</a></h1>
-<p id="rfc.section.18.p.1">draft-ietf-dprive-xfr-over-tls-08 * RFC2845 -&gt; (obsoleted by) RFC8945 * I-D.ietf-dnsop-dns-zone-digest -&gt; RFC8976 * Minor editorial changes + email update </p>
-<p id="rfc.section.18.p.2">draft-ietf-dprive-xfr-over-tls-07 </p>
+<p id="rfc.section.18.p.1">draft-ietf-dprive-xfr-over-tls-08 </p>
+<p/>
+
+<ul>
+  <li>RFC2845 -&gt; (obsoleted by) RFC8945</li>
+  <li>I-D.ietf-dnsop-dns-zone-digest -&gt; RFC8976</li>
+  <li>Minor editorial changes + email update</li>
+</ul>
+
+<p> </p>
+<p id="rfc.section.18.p.3">draft-ietf-dprive-xfr-over-tls-07 </p>
 <p/>
 
 <ul>
@@ -1213,7 +1222,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.4">draft-ietf-dprive-xfr-over-tls-06 </p>
+<p id="rfc.section.18.p.5">draft-ietf-dprive-xfr-over-tls-06 </p>
 <p/>
 
 <ul>
@@ -1223,7 +1232,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.6">draft-ietf-dprive-xfr-over-tls-05 </p>
+<p id="rfc.section.18.p.7">draft-ietf-dprive-xfr-over-tls-05 </p>
 <p/>
 
 <ul>
@@ -1232,7 +1241,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.8">draft-ietf-dprive-xfr-over-tls-04 </p>
+<p id="rfc.section.18.p.9">draft-ietf-dprive-xfr-over-tls-04 </p>
 <p/>
 
 <ul>
@@ -1241,7 +1250,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.10">draft-ietf-dprive-xfr-over-tls-03 </p>
+<p id="rfc.section.18.p.11">draft-ietf-dprive-xfr-over-tls-03 </p>
 <p/>
 
 <ul>
@@ -1256,7 +1265,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.12">draft-ietf-dprive-xfr-over-tls-02 </p>
+<p id="rfc.section.18.p.13">draft-ietf-dprive-xfr-over-tls-02 </p>
 <p/>
 
 <ul>
@@ -1269,7 +1278,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.14">draft-ietf-dprive-xfr-over-tls-01 </p>
+<p id="rfc.section.18.p.15">draft-ietf-dprive-xfr-over-tls-01 </p>
 <p/>
 
 <ul>
@@ -1278,7 +1287,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.16">draft-ietf-dprive-xfr-over-tls-00 </p>
+<p id="rfc.section.18.p.17">draft-ietf-dprive-xfr-over-tls-00 </p>
 <p/>
 
 <ul>
@@ -1288,7 +1297,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.18">draft-hzpa-dprive-xfr-over-tls-02 </p>
+<p id="rfc.section.18.p.19">draft-hzpa-dprive-xfr-over-tls-02 </p>
 <p/>
 
 <ul>
@@ -1296,7 +1305,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.20">draft-hzpa-dprive-xfr-over-tls-01 </p>
+<p id="rfc.section.18.p.21">draft-hzpa-dprive-xfr-over-tls-01 </p>
 <p/>
 
 <ul>
@@ -1304,7 +1313,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.22">draft-hzpa-dprive-xfr-over-tls-00 </p>
+<p id="rfc.section.18.p.23">draft-hzpa-dprive-xfr-over-tls-00 </p>
 <p/>
 
 <ul>
