--- a/draft-ietf-dprive-xfr-over-tls-09.html
+++ b/draft-ietf-dprive-xfr-over-tls-09.html
@@ -447,7 +447,7 @@
 
   <meta name="dct.creator" content="Toorop, W., Dickinson, S., Sahib, S., Aras, P., and A. Mankin" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-dprive-xfr-over-tls-09" />
-  <meta name="dct.issued" scheme="ISO8601" content="2021-3-24" />
+  <meta name="dct.issued" scheme="ISO8601" content="2021-3-29" />
   <meta name="dct.abstract" content="DNS zone transfers are transmitted in clear text, which gives attackers the opportunity to collect the content of a zone by eavesdropping on network connections. The DNS Transaction Signature (TSIG) mechanism is specified to restrict direct zone transfer to authorized clients only, but it does not add confidentiality. This document specifies the use of TLS, rather than clear text, to prevent zone content collection via passive monitoring of zone transfers: XFR-over-TLS (XoT). Additionally, this specification updates RFC1995, RFC5936 and RFC7766.  " />
   <meta name="description" content="DNS zone transfers are transmitted in clear text, which gives attackers the opportunity to collect the content of a zone by eavesdropping on network connections. The DNS Transaction Signature (TSIG) mechanism is specified to restrict direct zone transfer to authorized clients only, but it does not add confidentiality. This document specifies the use of TLS, rather than clear text, to prevent zone content collection via passive monitoring of zone transfers: XFR-over-TLS (XoT). Additionally, this specification updates RFC1995, RFC5936 and RFC7766.  " />
 
@@ -475,7 +475,7 @@
   <td class="right">Sinodun IT</td>
 </tr>
 <tr>
-  <td class="left">Expires: September 25, 2021</td>
+  <td class="left">Expires: September 30, 2021</td>
   <td class="right">S. Sahib</td>
 </tr>
 <tr>
@@ -492,7 +492,7 @@
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">March 24, 2021</td>
+  <td class="right">March 29, 2021</td>
 </tr>
 
     	
@@ -512,7 +512,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 25, 2021.</p>
+<p>This Internet-Draft will expire on September 30, 2021.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -777,7 +777,7 @@ unsecure hint at the new RRset for this (QNAME,QCLASS,QTYPE).
 </pre>
 <p id="rfc.section.6.3.1.p.3">But since the only supported QTYPE for NOTIFY is SOA, this does not pose a potential leak.  </p>
 <h1 id="rfc.section.6.3.2"><a href="#rfc.section.6.3.2">6.3.2.</a> <a href="#soa" id="soa">SOA</a></h1>
-<p id="rfc.section.6.3.2.p.1">For hidden primaries or secondaries the SOA response leaks only the degree of SOA lag of any downstream secondary.  </p>
+<p id="rfc.section.6.3.2.p.1">For hidden primaries or secondaries the SOA response leaks only the degree of SOA serial number lag of any downstream secondary.  </p>
 <h1 id="rfc.section.7"><a href="#rfc.section.7">7.</a> <a href="#updates-to-existing-specifications" id="updates-to-existing-specifications">Updates to existing specifications</a></h1>
 <p id="rfc.section.7.p.1">For convenience, the term 'XFR-over-TCP' is used in this document to mean both IXFR-over-TCP and AXFR-over-TCP and therefore statements that use that term update both <a href="#RFC1995">[RFC1995]</a> and <a href="#RFC5936">[RFC5936]</a>, and implicitly also apply to XoT.  Differences in behavior specific to XoT are discussed in <a href="#xot-specification">Section 8</a>.  </p>
 <p id="rfc.section.7.p.2">Both <a href="#RFC1995">[RFC1995]</a> and <a href="#RFC5936">[RFC5936]</a> were published sometime before TCP was considered a first class transport for DNS. <a href="#RFC1995">[RFC1995]</a>, in fact, says nothing with respect to optimizing IXFRs over TCP or re-using already open TCP connections to perform IXFRs or other queries. Therefore, there arguably is an implicit assumption that a TCP connection is used for one and only one IXFR request. Indeed, many major open source implementations currently take this approach. And whilst <a href="#RFC5936">[RFC5936]</a> gives guidance on connection re-use for AXFR, it pre-dates more recent specifications describing persistent TCP connections, e.g., <a href="#RFC7766">[RFC7766]</a>, <a href="#RFC7828">[RFC7828]</a> and AXFR implementations again often make less than optimal use of open connections.  </p>
@@ -801,7 +801,7 @@ unsecure hint at the new RRset for this (QNAME,QCLASS,QTYPE).
 
 <p> </p>
 <p id="rfc.section.7.p.7">The following sections include detailed clarifications on the updates to XFR behavior implied in <a href="#RFC7766">[RFC7766]</a> and how the use of <a href="#RFC7828">[RFC7828]</a> applies specifically to XFR exchanges. It also discusses how IXFR and AXFR can reuse the same TCP connection.  </p>
-<p id="rfc.section.7.p.8">For completeness, we also mention here the recent specification of extended DNS error (EDE) codes <a href="#RFC8914">[RFC8914]</a>. For zone transfers, when returning REFUSED to a zone transfer request to an 'unauthorized' client (e.g., where the client is not listed in an ACL for zone transfers or does not sign the request with the correct TSIG key), the extended DNS error code 18 (Prohibited) can also be sent.  </p>
+<p id="rfc.section.7.p.8">For completeness, we also mention here the recent specification of extended DNS error (EDE) codes <a href="#RFC8914">[RFC8914]</a>. For zone transfers, when returning REFUSED to a zone transfer request from an 'unauthorized' client (e.g., where the client is not listed in an ACL for zone transfers or does not sign the request with the correct TSIG key), the extended DNS error code 18 (Prohibited) can also be sent.  </p>
 <h1 id="rfc.section.7.1"><a href="#rfc.section.7.1">7.1.</a> <a href="#update-to-rfc1995-for-ixfrovertcp" id="update-to-rfc1995-for-ixfrovertcp">Update to RFC1995 for IXFR-over-TCP</a></h1>
 <p id="rfc.section.7.1.p.1">For clarity - an IXFR-over-TCP server compliant with this specification MUST be able to handle multiple concurrent IXoT requests on a single TCP connection (for the same and different zones) and SHOULD send the responses as soon as they are available, which might be out-of-order compared to the requests.  </p>
 <h1 id="rfc.section.7.2"><a href="#rfc.section.7.2">7.2.</a> <a href="#update-to-rfc5936-for-axfrovertcp" id="update-to-rfc5936-for-axfrovertcp">Update to RFC5936 for AXFR-over-TCP</a></h1>
@@ -1061,7 +1061,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.10.3.1.p.3">As such it does not offer a defense against active attacks (e.g,. an on path active attacker on the connection from client to server), and is not considered as useful for XoT.  </p>
+<p id="rfc.section.10.3.1.p.3">As such it does not offer a defense against active attacks (e.g., an on path active attacker on the connection from client to server), and is not considered as useful for XoT.  </p>
 <p id="rfc.section.10.3.1.p.4">Properties: None guaranteed.  </p>
 <h1 id="rfc.section.10.3.2"><a href="#rfc.section.10.3.2">10.3.2.</a> <a href="#strict-tls" id="strict-tls">Strict TLS</a></h1>
 <p id="rfc.section.10.3.2.p.1">Strict TLS for DoT <a href="#RFC8310">[RFC8310]</a> requires that a client is configured with an authentication domain name (and/or SPKI pinset) that MUST be used to authenticate the TLS handshake with the server. If authentication of the server fails, the client will not proceed with the connection. This provides a defense for the client against active surveillance, providing client-to-server authentication and end-to-end channel confidentiality.  </p>
