--- a/draft-ietf-dprive-xfr-over-tls-09.html
+++ b/draft-ietf-dprive-xfr-over-tls-09.html
@@ -1205,7 +1205,15 @@ described below)."
 <p id="rfc.section.19.p.2">Han Zhang <br/> Salesforce <br/> San Francisco, CA <br/> United States </p>
 <p id="rfc.section.19.p.3">Email: hzhang@salesforce.com </p>
 <h1 id="rfc.section.20"><a href="#rfc.section.20">20.</a> <a href="#changelog" id="changelog">Changelog</a></h1>
-<p id="rfc.section.20.p.1">draft-ietf-dprive-xfr-over-tls-08 </p>
+<p id="rfc.section.20.p.1">draft-ietf-dprive-xfr-over-tls-09 </p>
+<p/>
+
+<ul>
+  <li>Address issued raised in the AD review</li>
+</ul>
+
+<p> </p>
+<p id="rfc.section.20.p.3">draft-ietf-dprive-xfr-over-tls-08 </p>
 <p/>
 
 <ul>
@@ -1215,7 +1223,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.3">draft-ietf-dprive-xfr-over-tls-07 </p>
+<p id="rfc.section.20.p.5">draft-ietf-dprive-xfr-over-tls-07 </p>
 <p/>
 
 <ul>
@@ -1225,7 +1233,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.5">draft-ietf-dprive-xfr-over-tls-06 </p>
+<p id="rfc.section.20.p.7">draft-ietf-dprive-xfr-over-tls-06 </p>
 <p/>
 
 <ul>
@@ -1235,7 +1243,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.7">draft-ietf-dprive-xfr-over-tls-05 </p>
+<p id="rfc.section.20.p.9">draft-ietf-dprive-xfr-over-tls-05 </p>
 <p/>
 
 <ul>
@@ -1244,7 +1252,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.9">draft-ietf-dprive-xfr-over-tls-04 </p>
+<p id="rfc.section.20.p.11">draft-ietf-dprive-xfr-over-tls-04 </p>
 <p/>
 
 <ul>
@@ -1253,7 +1261,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.11">draft-ietf-dprive-xfr-over-tls-03 </p>
+<p id="rfc.section.20.p.13">draft-ietf-dprive-xfr-over-tls-03 </p>
 <p/>
 
 <ul>
@@ -1268,7 +1276,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.13">draft-ietf-dprive-xfr-over-tls-02 </p>
+<p id="rfc.section.20.p.15">draft-ietf-dprive-xfr-over-tls-02 </p>
 <p/>
 
 <ul>
@@ -1281,7 +1289,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.15">draft-ietf-dprive-xfr-over-tls-01 </p>
+<p id="rfc.section.20.p.17">draft-ietf-dprive-xfr-over-tls-01 </p>
 <p/>
 
 <ul>
@@ -1290,7 +1298,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.17">draft-ietf-dprive-xfr-over-tls-00 </p>
+<p id="rfc.section.20.p.19">draft-ietf-dprive-xfr-over-tls-00 </p>
 <p/>
 
 <ul>
@@ -1300,7 +1308,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.19">draft-hzpa-dprive-xfr-over-tls-02 </p>
+<p id="rfc.section.20.p.21">draft-hzpa-dprive-xfr-over-tls-02 </p>
 <p/>
 
 <ul>
@@ -1308,7 +1316,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.21">draft-hzpa-dprive-xfr-over-tls-01 </p>
+<p id="rfc.section.20.p.23">draft-hzpa-dprive-xfr-over-tls-01 </p>
 <p/>
 
 <ul>
@@ -1316,7 +1324,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.20.p.23">draft-hzpa-dprive-xfr-over-tls-00 </p>
+<p id="rfc.section.20.p.25">draft-hzpa-dprive-xfr-over-tls-00 </p>
 <p/>
 
 <ul>
